k8s/guestbook/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: guestbook-ingress
  namespace: default
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
  - host: a383ad26e90fb45178888385245fccfd-1100202604.us-east-1.elb.amazonaws.com
    http:
      paths:
        - path: /
          pathType: Prefix
          backend:
            service: 
              name: frontend
              port: 
                number: 80
